<resources>
    <string name="app_name">WhereIsEveryone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create new account</string>
    <string name="permission_needed">We need your permission!</string>
    <string name="location_permission_text">To send your location to others and unlock full potential of this application please allow us to get your location.</string>
    <string name="internet_permission_text">Internet connection is needed for this application to work</string>
    <string name="accept">Sure</string>
    <string name="decline">No!</string>
    <string name="all_strings_required">All fields required</string>
    <string name="login_failed">Wrong login or password</string>
    <string name="signup_failed">Signup failed</string>
    <string name="connection_error">Connection error</string>
    <string name="empty_fields">All fields required!</string>
    <string name="password_too_short">Password needs to be 6 characters minimum</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_map_view">Map</string>
    <string name="menu_navigation_view">Navigation</string>
    <string name="menu_friends">Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_friend">Add friend</string>
    <string name="change_nick">Change nick</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_nick">Enter your nick</string>
    <string name="enter_value">Enter value</string>
    <string name="text_is_not_email">Text is not email!</string>
    <string name="text_is_empty">Text is empty!</string>
    <string name="friends_id_not_found">Friends ID not found!</string>
    <string name="error_getting_friend_from_database">Error getting friend from database!</string>
    <string name="add_notification">Here you can put notification over your marker</string>
    <string name="add_marker">Here you can write marker text</string>
    <string name="message_field">Write your message here</string>
</resources>